styles/home.css
@charset "UTF-8";
/* CSS Document */

/* ************************************************************************************
SECTION - HEADER
************************************************************************************* */
/* ************************************************************************************
HEADER - LOGO & SHORT SUMMARY OF SKILLS
************************************************************************************* */
header {
	padding: 60px 0px;
	text-align: center;
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center
}
.header-logo {
	margin: 0 auto 15px;
	width: 150px;
	display: block;
}
.my-name {
	font-family: 'Work Sans', sans-serif;
	font-weight: 700;
	font-size: 2.1em;
	text-transform: uppercase;
	margin: 0px 15px 0px;
	color: #383838;
}
.my-role {
	font-weight: 500;
	padding: 0px 12px;
}
.header-intro {
	max-width: 660px;
	font-weight: 400;
	font-style: italic;
	font-size: 1.1em;
	letter-spacing: 0.2px;
	padding: 0px 15px;
}
.social-header-wrap {
	margin: 20px 12% 0px;
	display: flex;
	justify-content: center;
}
.social-button {
	width: 40px;
	margin: 0px 15px;
}
@media (max-width: 460px) {
	.social-button {
		width: 36px;
		margin: 0px 12px;
	}
}
@media (max-width: 260px) {
	.my-name {
		font-size: 2em;
	}
	.social-button {
		width: 36px;
		margin: 0px 8px;
	}
}


/* ************************************************************************************
SECTION - FEATURED PROJECTS
************************************************************************************* */
/* ************************************************************************************
PROJECTS - TITLES & PROJECT DESCRIPTIONS
************************************************************************************* */
.project-group {
	text-align: center;		
}
.row {
	height: 600px;
	background-color: #E8E8E8;
	display: flex;
  justify-content: center;
  align-items: center;
	position: relative;
}
.row-modal {
	max-width: 420px;
	min-width: 200px;
	height: 250px;
	margin: 0px 12%;
	background-color: #333;
	opacity: 0.96;
	display: flex;
  justify-content: center;
  align-items: center;
}
.row-content {
	width: 88%;
	height: 200px;
	display: flex;
	flex-direction: column;
	justify-content: space-around;
	align-items: center;
	padding-bottom: 1px;
}
.project-tag {
	font-style: italic;
	font-weight: 300;
	font-size: 0.95em;
	color: #BBB;
}
.project-name {
	font-size: 1.65em;
	font-weight: 600;
	color: #FFF;
	text-transform: uppercase;
	letter-spacing: 5%;
}
.project-brief {
	color: #FFF;
	font-weight: 200;
	font-size: 0.93em;
	letter-spacing: 0.1px;
}
.project-button {
	width: 170px;
	height: 40px;
	display: flex;
	justify-content: center;
	align-items: center;
	border: thin solid #FFFFFF;
	text-decoration: none;
	letter-spacing: 0px;
	margin-top: 15px;
}
.project-button-text {
	font-family: 'Open Sans', sans-serif;
	font-size: 1em;
	font-weight: 400;
	letter-spacing: 0.3;
	color: #FFFFFF;
}

/* ************************************************************************************
SECTION - MEDIA QUERIES FOR HOMEPAGE ELEMENTS
************************************************************************************* */
/* ************************************************************************************
MEDIA QUERIES - MOBILE DEVICES
************************************************************************************* */
@media (max-width: 560px) {
	.header-logo {
		width: 120px;
	}
	.my-name {
		font-size: 2em;
	}
	.header-intro {
		font-size: 1.05em;
	}
	.row-content {
		width: 87%;
	}
	.project-tag {
		font-size: 0.95em;
	}
	.project-name {
		font-size: 1.5em;
		letter-spacing: 0.1px;
	}
	.project-brief {
		font-size: 0.93em;
	}
	.project-button-text {
		font-size: 0.96em;
	}
	#boxly-logo {
		width: 150px;
	}
}
@media (max-width: 380px) {
	.row-modal {
		margin: 0px 15%;
	}
	.row-content {
		height: 220px;
	}
}


/* ************************************************************************************
PROJECTS - PROJECT ROW STYLING
************************************************************************************* */
#meme {
	background-size: cover;
	background-repeat: no-repeat;
	background-position: 50% 50%;
	background-image: url(../images/cs-meme/meme-hero-img.png);
}
#boxly {
	background-image: url(../images/cs-boxly/boxly-hero-img-v1.png);
	background-size: cover;
	background-position: 50% 50%;
	position: relative;
	background-color: #0592BE;
}
#boxly-logo {
	width: 180px;
	position: absolute;
	right: 20px;
	bottom: 20px;
}
#folio {
	display: flex;
	flex-direction: column;
	justify-content: space-between;
	background-color: #FFED48;
}
.folio-hero-row-1 {
	align-self: flex-start;
	margin: 25px 0px 0px 25px;
}
.folio-hero-text-pink {
	color: #FF0090;
}
.folio-hero-text {
	font-family: 'Work Sans', sans-serif;
	font-weight: 800;
	font-size: 2.4em;
	color: #282828;
	line-height: 102%;
	text-align: left;
}
.folio-hero-row-3 {
	align-self: flex-end;
	margin: 3px 15px 10px 0px;
}
.octocat-wrap {
	width: 290px;
}

